# DataFlowGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.sh  requirements.txt
benchmark/HLS/doitgenTriple/: doitgenTriple.c  doitgenTriple.mlir  doitgenTriple_optimzied.json  doitgenTriple_optimzied.mlir
benchmark/HLS/dropout/: dropout.c  dropout.mlir  dropout_optimized.json  dropout_optimized.mlir
benchmark/HLS/fir/: fir.cpp  fir.mlir  fir_optimized.json  fir_optimized.mlir  optimized.mlir
benchmark/HLS/getTanh/: getTanh.c  getTanh_optimized.json  getTanh_optimized.mlir
benchmark/HLS/getTanhdouble/: getTanhdouble.cpp
benchmark/HLS/histogram/: histogram.cpp  histogram.mlir  histogram_optimized.json  histogram_optimized.mlir  kernel.cpp
benchmark/HLS/if_loop_1/: if_loop_1.cpp  if_loop_1_optimized.json  if_loop_1_optimized.mlir
benchmark/HLS/matrix_add/: matrix_add.cpp  matrix_add_optimized.json  matrix_add_optimized.mlir
benchmark/HLS/sum_mem/: optimized.mlir
benchmark/HLS/sumi3_mem/: sumi3_mem.cpp  sumi3_mem.mlir  sumi3_mem_optimized.json  sumi3_mem_optimized.mlir
benchmark/doitgenTriple/: optimized.mlir
benchmark/dropout/: dropout.mlir
benchmark/fir/: fir.cpp  fir.mlir
benchmark/getTanh/: getTanh.c  kernel.mlir
benchmark/getTanhdouble/: kernel.mlir
benchmark/if_loop_1/: if_loop.mlir
benchmark/matrixadd/: matrix_add.cpp  matrix_add.mlir  matrixadd_test.cpp
benchmark/sum_mem/: sumi3.cpp  sumi3_mem.mlir
hardware/: README.md  build.sbt  build.sh  run.sh
hardware/dataset/doitgenTriple/: in.txt
hardware/dataset/dropout/: dropout.txt
hardware/dataset/histogram/: in.txt
hardware/dataset/if_loop_1/: if_loop_1.txt
hardware/dataset/matirx_add/: in.txt
hardware/dataset/sumi3_mem/: sumi3_mem.txt
hardware/project/: plugins.sbt
heteacc-opt/: CMakeLists.txt  heteacc-opt.cpp
include/heteacc/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h
include/heteacc-c/Dialect/: DataFlow.h
include/heteacc/Dialect/: CMakeLists.txt
include/heteacc/Graph/: Graph.h  GraphGen.h  Node.h  Utils.h  Visitor.h
include/heteacc/Misc/: Utils.h  VecUtils.h
include/heteacc/Transforms/: CMakeLists.txt  Model.h  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt  dataflow.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/DataFlow/: CMakeLists.txt  DataFlowDialect.cpp  Utils.cpp
lib/Dialect/Vectorization/: CMakeLists.txt  VecDialect.cpp  VecOps.cpp
lib/Transforms/: CMakeLists.txt  EvaluationModel.cpp
lib/Transforms/Dataflow/: EnhancedCDFG.cpp  GenerateDataflow.cpp  HybridBranchPrediction.cpp  OptimizeDataflow.cpp
lib/Transforms/Graph/: DependencyAnalyze.cpp  DumpChisel.cpp  Graph.cpp  GraphGen.cpp  Node.cpp  Utils.cpp
lib/Transforms/Loop/: AffineLoopPerfection.cpp  AffineLoopPermutation.cpp
lib/Transforms/Memory/: AnalyzeMemrefAddress.cpp  GenerateGEP.cpp  MemoryScheduling.cpp  SimplifyVectorMemrefAccess.cpp
lib/Transforms/Misc/: EvaluationModel.cpp  HybridAnalysis.cpp  Utils.cpp
lib/Transforms/Vectorization/: OperationFusion.cpp
python/: CMakeLists.txt  HeteaccExtension.cpp  PybindAdaptors.h
python/heteacc/: DataFlowOps.td  __init__.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/passes/: analyze-memref-address.mlir  generate-dataflow.mlir  generate-gep.mlir  operation-fusion.mlir  optimize-dataflow-affine-if.mlir  optimize-dataflow-remsi.mlir  optimize-dataflow.mlir  simplify-vector-memref-access.mlir
test/pipelines/: generate-gep-vector.mlir  optimize-then-gep.mlir
test/smoke/: show-dialects.mlir
tools/: CMakeLists.txt
tools/heteacc-opt/: CMakeLists.txt  heteacc-opt.cpp
(+147 files in other folders)
